<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test_client</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="host">请输入主机号</string>
    <string name="run">运行</string>
    <string name="test">测试网络</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="save">进入保存状态</string>

</resources>
