<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test_client.MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:text="@string/host"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="29dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/b_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/condition"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/condition"
        android:layout_marginTop="27dp"
        android:text="@string/run" />

    <Button
        android:id="@+id/b_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_run"
        android:layout_alignRight="@+id/b_run"
        android:layout_below="@+id/b_run"
        android:layout_marginTop="26dp"
        android:text="@string/test" />

    <Button
        android:id="@+id/b_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_test"
        android:layout_alignRight="@+id/b_test"
        android:layout_below="@+id/b_test"
        android:layout_marginTop="24dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/b_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_stop"
        android:layout_alignRight="@+id/b_stop"
        android:layout_below="@+id/b_stop"
        android:layout_marginTop="19dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/b_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/pause" />

</RelativeLayout>
